--- a/frontend/myapp/src/components/Admin/ChangePassword1.css
+++ b/frontend/myapp/src/components/Admin/ChangePassword1.css
@@ -2,6 +2,7 @@
 
 .change-password-container {
   min-height: 100vh;
+  width:100vw;
   display: flex;
   align-items: center;
   justify-content: center;
