--- a/frontend/myapp/src/components/SuperAdmin/SuperAdmin.css
+++ b/frontend/myapp/src/components/SuperAdmin/SuperAdmin.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+.user-email {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 180px; /* Adjust based on your sidebar width */
+  font-size: 0.8rem;
+  color: #fbfbfb;
+}
+
 html, body {
   width: 100%;
   overflow-x: hidden;
